# rillo

./: README.md  compose.yaml  pyproject.toml  zensical.toml
.github/workflows/: code-check.yaml  docs.yml  pypi-publish.yaml
docs/: index.md
src/rillo/: __init__.py  aggregate.py  nats.py  repository.py  respository.py  snapshot.py  snapshot_store.py
tests/: conftest.py  test_aggregate.py  test_nats.py  test_repository.py  test_snapshot_store.py
