[project]
name = "rillo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.1",
]

[project.optional-dependencies]
nats = [
    "nats-py>=2.14.0",
]

[project.scripts]
rillo = "rillo:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
