[project]
name = "rillo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.1",
]

[project.optional-dependencies]
nats = [
    "nats-py>=2.14.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "zensical>=0.0.33",
]

[tool.poe.tasks]
format = [
  { cmd = "ruff check --select I --fix" },
  { cmd = "ruff format" }
]
check = [
  { cmd = "ruff check" },
  { cmd = "ruff format --check" },
  { cmd = "ty check" }
]
test = [
  { cmd = "pytest" },
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:nats",
]
